fix: ajustes no script